--- a/AndroidProjects/app/src/main/res/layout/activity_description.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_description.xml
@@ -62,14 +62,25 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/descriptionOfHero"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="80dp"
         android:gravity="top"
         android:hint="Descrição do personagem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hero_age" />
+
+    <Button
+        android:id="@+id/save_hero_button"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
+        android:hint="Salvar"
+        android:textColorHint="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionOfHero" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
