--- a/AndroidProjects/app/src/main/res/layout/activity_login.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_login.xml
@@ -48,5 +48,18 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/cadastro_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="42dp"
+        android:hint="Registrar"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_Input" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
