--- a/AndroidProjects/app/src/main/res/layout/activity_cadastro.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_cadastro.xml
@@ -33,6 +33,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_email" />
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/user_name"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:hint="Name"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/register_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_email" />
+
     <Button
         android:id="@+id/register_button"
         android:layout_width="150dp"
