--- a/AndroidProjects/app/src/main/res/layout/activity_description.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_description.xml
@@ -40,6 +40,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hero_link" />
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/hero_date"
+        android:layout_width="90dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="179dp"
+        android:layout_marginBottom="22dp"
+        android:hint="data"
+        android:textColorHint="@color/white"
+        android:inputType="date"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionOfHero"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_heroi" />
+
     <Spinner
         android:id="@+id/spinner_editora"
         android:layout_width="128dp"
@@ -64,7 +81,7 @@
         android:id="@+id/descriptionOfHero"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="80dp"
         android:gravity="top"
         android:hint="Descrição do personagem"
@@ -75,10 +92,12 @@
         android:id="@+id/save_hero_button"
         android:layout_width="180dp"
         android:layout_height="70dp"
+        android:layout_marginTop="8dp"
         android:hint="Salvar"
         android:textColorHint="@color/white"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionOfHero" />
 
